# GameEngineSandbox

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  buildAndRun.sh  generate_osx.sh  generate_uwp.ps1  generate_win32.ps1  pipeline.ps1
dependencies/: CMakeLists.txt
dependencies/application/: CMakeLists.txt
dependencies/application-cxx/: CMakeLists.txt
dependencies/application-cxx/source/uwp/: GLPage.cpp  GLPage.h  OpenGLES.h  UwpApplication.cpp  UwpApplication.h
dependencies/application/source/common/: GameLoop.cpp
dependencies/application/source/uwp/: GLPage.cpp  GLPage.h  OpenGLES.cpp  StartUwpApplication.cpp  UwpApplication.cpp
dependencies/engine/: CMakeLists.txt
dependencies/engine/application/: CMakeLists.txt
dependencies/engine/application-cxx/: CMakeLists.txt
dependencies/engine/application-cxx/source/uwp/: GLPage.cpp  GLPage.h  GLPage.hpp  OpenGLES.cpp  OpenGLES.hpp  StartUwpApplication.cpp  UwpApplication.cpp  UwpApplication.h
dependencies/engine/application-cxx/source/win32/: StartWin32Application.cpp
dependencies/engine/application/source/android/: Application.cpp  Application.h  StartApplication.cpp
dependencies/engine/application/source/emscripten/: StartApplication.cpp
dependencies/engine/application/source/linux/: StartApplication.cpp  StartLinuxApplication.cpp
dependencies/engine/application/source/osx/: Application.hpp  StartApplication.cpp  StartOsxApplication.cpp
dependencies/engine/application/source/posix/: Application.cpp  Application.hpp
dependencies/engine/application/source/uwp/: GLPage.cpp  GLPage.h  GLPage.hpp  OpenGLES.cpp  OpenGLES.h  OpenGLES.hpp  (+5 more)
dependencies/engine/audio/: CMakeLists.txt
dependencies/engine/filesystem/: CMakeLists.txt
dependencies/engine/game-loop/: CMakeLists.txt
dependencies/engine/http/: CMakeLists.txt
dependencies/engine/include/: GameLoop.h  GameScene.h
dependencies/engine/include/common/: GLHelper.h  GameLoop.h  IGameLoopCallback.h
dependencies/engine/include/uwp/: UwpApplication.h  glwrapper.h
dependencies/engine/input/: CMakeLists.txt
dependencies/engine/physics/: CMakeLists.txt
dependencies/engine/renderer/: CMakeLists.txt
dependencies/engine/renderers/: CMakeLists.txt
dependencies/engine/resources/: CMakeLists.txt
dependencies/engine/scenes/: CMakeLists.txt
dependencies/engine/source/common/: GLHelper.cpp  GameLoop.cpp  GameScene.cpp  SceneManager.cpp  SimpleRenderer.cpp  SimpleRenderer.h
dependencies/engine/source/uwp/: Application.cpp  DirectXPage.cpp  DirectXPage.h  FileSystemUwp.cpp  GLPage.cpp  GLPage.h  InputManagerUwp.cpp  OpenGLES.cpp  OpenGLES.h  TextureManagerUwp.cpp  UwpApplication.cpp
dependencies/engine/source/win32/: Application.cpp  FileSystemWin32.cpp  StartWin32Application.cpp  TextureManagerWin32.cpp  Win32Application.cpp
dependencies/engine/systems/: CMakeLists.txt
dependencies/engine/textures/: CMakeLists.txt
dependencies/engine/updatetask/: CMakeLists.txt
dependencies/engine/utilities/: CMakeLists.txt
dependencies/game-loop/: CMakeLists.txt
dependencies/gameloop/: CMakeLists.txt
dependencies/gameloop/include/: GameLoop.h
dependencies/pipeline/: functions.cmake  inject.py  inject.py.in  utilities.py
dependencies/pipeline/uwp/: inject.py.in  package.appxManifest.in
dependencies/utilities/: CMakeLists.txt
dependencies/utilities/include/: StepTimer.h
dependencies/utilities/include/common/: IOC.hpp  IStepTimer.h  MathHelper.h  Singleton.hpp  StepTimer.h  test.h
dependencies/utilities/include/msft/: StepTimer.h
dependencies/utilities/include/uwp/: DispatcherWrapper.h  SetThreadName.h
dependencies/utilities/source/linux/: StepTimer.cpp
dependencies/utilities/source/msft/: StepTimer.cpp
dependencies/utilities/source/osx/: StepTimer_osx.cpp
dependencies/utilities/source/uwp/: DispatcherWrapper.cpp  DispatcherWrapper.h  StepTimer_uwp.cpp  test_uwp.cpp
dependencies/utilities/source/win32/: StepTimer_win32.cpp
game/: CMakeLists.txt
game/source/: main.cpp
game/source/common/: Game.cpp  Game.h  IGameStateCallback.h
game/source/common/game/: GameState.h
game/source/common/game-objects/: Apple.cpp  Apple.h  Entity.cpp  Entity.h  GameState.h  Snake.cpp  Snake.h  SpriteCollider.cpp  SpriteCollider.h
game/source/common/objects/: Apple.h  Entity.h
game/source/common/scenes/: GameOverScene.cpp  GameOverScene.h  GamePlayScene.cpp  GamePlayScene.h  PauseScene.cpp  PauseScene.h  SplashScene.cpp  SplashScene.h
game/source/uwp/: main.cpp
game/source/win32/: main.cpp
games/flappybird/: CMakeLists.txt
games/flappybird/assets/: CMakeLists.txt
games/flappybird/assets/uwp/: toast.xml
games/flappybird/source/android/: main.cpp
games/flappybird/source/emscripten/: BootScene.cpp  BootScene.hpp
games/helloworld/: CMakeLists.txt
games/helloworld/assets/: CMakeLists.txt
games/helloworld/source/emscripten/: BootScene.cpp
games/sokoban/: CMakeLists.txt
snake/: CMakeLists.txt
snake/resources/: CMakeLists.txt
snake/resources/uwp/: package.appxManifest
snake/source/common/game/: Bootstrap.hpp  Game.cpp  Game.h  GameDefines.h  GameState.h
snake/source/common/objects/: Apple.cpp  Apple.h  Entity.cpp  Entity.h  PointCollider.cpp  PointCollider.h  PointCollider.hpp  Snake.cpp  Snake.h  Snake.hpp  VectorCollider.cpp  VectorCollider.h
snake/source/common/scenes/: GameOverScene.cpp  GameOverScene.h  GameOverScene.hpp  GamePlayScene.cpp  GamePlayScene.h  GamePlayScene.hpp  PauseScene.cpp  PauseScene.h  PauseScene.hpp  SplashScene.cpp  SplashScene.h
snake/source/linux/: main.cpp
snake/source/osx/: main.cpp
snake/source/uwp/: main.cpp
snake/source/win32/: main.cpp
sokoban/: CMakeLists.txt
sokoban/source/common/game/: Bootstrap.hpp  GameDefines.hpp  GameStateMachine.cpp
sokoban/source/common/objects/: Crate.cpp  Crate.hpp  FixedTile.cpp  FixedTile.hpp  Map.cpp  Map.hpp  MoveableObject.cpp  MoveableObject.hpp  Player.cpp  Player.hpp
sokoban/source/common/scenes/: BootScene.cpp  BootScene.hpp  GameOverScene.cpp  GameOverScene.hpp  GamePlayScene.cpp  GamePlayScene.hpp
(+557 files in other folders)
